1. отформатировал код линтером black 1. обновил файл со схемой openAPI
