# django_proj/openapi.yaml
@@ -167,6 +167,380 @@ paths:
           description: ''
       tags:
       - Notes
+  /api/groups:
+    get:
+      operationId: listGroups
+      description: "\u0412\u044B\u0431\u043E\u0440\u043A\u0430  \u0433\u0440\u0443\
+        \u043F\u043F \u0434\u043B\u044F \u0430\u0443\u0442\u0435\u043D\u0442\u0438\
+        \u0444\u0438\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u0433\u043E\
+        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\
+        ."
+      parameters:
+      - name: limit
+        required: false
+        in: query
+        description: Number of results to return per page.
+        schema:
+          type: integer
+      - name: offset
+        required: false
+        in: query
+        description: The initial index from which to return the results.
+        schema:
+          type: integer
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  count:
+                    type: integer
+                    example: 123
+                  next:
+                    type: string
+                    nullable: true
+                    format: uri
+                    example: http://api.example.org/accounts/?offset=400&limit=100
+                  previous:
+                    type: string
+                    nullable: true
+                    format: uri
+                    example: http://api.example.org/accounts/?offset=200&limit=100
+                  results:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Groups'
+          description: ''
+      tags:
+      - Groups
+    post:
+      operationId: createGroups
+      description: "\u0412\u044B\u0431\u043E\u0440\u043A\u0430  \u0433\u0440\u0443\
+        \u043F\u043F \u0434\u043B\u044F \u0430\u0443\u0442\u0435\u043D\u0442\u0438\
+        \u0444\u0438\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u0433\u043E\
+        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\
+        ."
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Groups'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Groups'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Groups'
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Groups'
+          description: ''
+      tags:
+      - Groups
+  /api/groups/{id}:
+    get:
+      operationId: retrieveGroups
+      description: "\u0412\u044B\u0431\u043E\u0440\u043A\u0430  \u0433\u0440\u0443\
+        \u043F\u043F \u0434\u043B\u044F \u0430\u0443\u0442\u0435\u043D\u0442\u0438\
+        \u0444\u0438\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u0433\u043E\
+        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\
+        ."
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: ''
+        schema:
+          type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Groups'
+          description: ''
+      tags:
+      - Groups
+    put:
+      operationId: updateGroups
+      description: "\u0412\u044B\u0431\u043E\u0440\u043A\u0430  \u0433\u0440\u0443\
+        \u043F\u043F \u0434\u043B\u044F \u0430\u0443\u0442\u0435\u043D\u0442\u0438\
+        \u0444\u0438\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u0433\u043E\
+        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\
+        ."
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: ''
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Groups'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Groups'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Groups'
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Groups'
+          description: ''
+      tags:
+      - Groups
+    patch:
+      operationId: partialUpdateGroups
+      description: "\u0412\u044B\u0431\u043E\u0440\u043A\u0430  \u0433\u0440\u0443\
+        \u043F\u043F \u0434\u043B\u044F \u0430\u0443\u0442\u0435\u043D\u0442\u0438\
+        \u0444\u0438\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u0433\u043E\
+        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\
+        ."
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: ''
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Groups'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Groups'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Groups'
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Groups'
+          description: ''
+      tags:
+      - Groups
+    delete:
+      operationId: destroyGroups
+      description: "\u0412\u044B\u0431\u043E\u0440\u043A\u0430  \u0433\u0440\u0443\
+        \u043F\u043F \u0434\u043B\u044F \u0430\u0443\u0442\u0435\u043D\u0442\u0438\
+        \u0444\u0438\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u0433\u043E\
+        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\
+        ."
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: ''
+        schema:
+          type: string
+      responses:
+        '204':
+          description: ''
+      tags:
+      - Groups
+  /api/tags:
+    get:
+      operationId: listTags
+      description: "\u0412\u044B\u0431\u043E\u0440\u043A\u0430  \u0442\u044D\u0433\
+        \u043E\u0432 \u0434\u043B\u044F \u0430\u0443\u0442\u0435\u043D\u0442\u0438\
+        \u0444\u0438\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u0433\u043E\
+        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\
+        ."
+      parameters:
+      - name: limit
+        required: false
+        in: query
+        description: Number of results to return per page.
+        schema:
+          type: integer
+      - name: offset
+        required: false
+        in: query
+        description: The initial index from which to return the results.
+        schema:
+          type: integer
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  count:
+                    type: integer
+                    example: 123
+                  next:
+                    type: string
+                    nullable: true
+                    format: uri
+                    example: http://api.example.org/accounts/?offset=400&limit=100
+                  previous:
+                    type: string
+                    nullable: true
+                    format: uri
+                    example: http://api.example.org/accounts/?offset=200&limit=100
+                  results:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Tags'
+          description: ''
+      tags:
+      - Tags
+    post:
+      operationId: createTags
+      description: "\u0412\u044B\u0431\u043E\u0440\u043A\u0430  \u0442\u044D\u0433\
+        \u043E\u0432 \u0434\u043B\u044F \u0430\u0443\u0442\u0435\u043D\u0442\u0438\
+        \u0444\u0438\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u0433\u043E\
+        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\
+        ."
+      parameters: []
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Tags'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Tags'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Tags'
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Tags'
+          description: ''
+      tags:
+      - Tags
+  /api/tags/{id}:
+    get:
+      operationId: retrieveTags
+      description: "\u0412\u044B\u0431\u043E\u0440\u043A\u0430  \u0442\u044D\u0433\
+        \u043E\u0432 \u0434\u043B\u044F \u0430\u0443\u0442\u0435\u043D\u0442\u0438\
+        \u0444\u0438\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u0433\u043E\
+        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\
+        ."
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: ''
+        schema:
+          type: string
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Tags'
+          description: ''
+      tags:
+      - Tags
+    put:
+      operationId: updateTags
+      description: "\u0412\u044B\u0431\u043E\u0440\u043A\u0430  \u0442\u044D\u0433\
+        \u043E\u0432 \u0434\u043B\u044F \u0430\u0443\u0442\u0435\u043D\u0442\u0438\
+        \u0444\u0438\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u0433\u043E\
+        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\
+        ."
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: ''
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Tags'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Tags'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Tags'
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Tags'
+          description: ''
+      tags:
+      - Tags
+    patch:
+      operationId: partialUpdateTags
+      description: "\u0412\u044B\u0431\u043E\u0440\u043A\u0430  \u0442\u044D\u0433\
+        \u043E\u0432 \u0434\u043B\u044F \u0430\u0443\u0442\u0435\u043D\u0442\u0438\
+        \u0444\u0438\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u0433\u043E\
+        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\
+        ."
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: ''
+        schema:
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Tags'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/Tags'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/Tags'
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Tags'
+          description: ''
+      tags:
+      - Tags
+    delete:
+      operationId: destroyTags
+      description: "\u0412\u044B\u0431\u043E\u0440\u043A\u0430  \u0442\u044D\u0433\
+        \u043E\u0432 \u0434\u043B\u044F \u0430\u0443\u0442\u0435\u043D\u0442\u0438\
+        \u0444\u0438\u0446\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u043E\u0433\u043E\
+        \ \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F\
+        ."
+      parameters:
+      - name: id
+        in: path
+        required: true
+        description: ''
+        schema:
+          type: string
+      responses:
+        '204':
+          description: ''
+      tags:
+      - Tags
 components:
   schemas:
     Notes:
@@ -188,6 +562,52 @@ components:
           maxLength: 64
         content:
           type: string
+        group_id:
+          type: integer
+          nullable: true
+          description: "\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0433\u0440\
+            \u0443\u043F\u043F\u044B \u0432 \u043A\u043E\u0442\u043E\u0440\u0443\u044E\
+            \ \u0432\u0445\u043E\u0434\u0438\u0442 \u0437\u0430\u043C\u0435\u0442\u043A\
+            \u0430"
+        tags:
+          type: array
+          items:
+            type: integer
+          description: "\u0422\u044D\u0433\u0438 \u0437\u0430\u043C\u0435\u0442\u043E\
+            \u043A"
       required:
       - title
       - content
+    Groups:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        created:
+          type: string
+          format: date-time
+          readOnly: true
+        name:
+          type: string
+          maxLength: 16
+        content:
+          type: string
+      required:
+      - name
+      - content
+    Tags:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        created:
+          type: string
+          format: date-time
+          readOnly: true
+        name:
+          type: string
+          maxLength: 16
+      required:
+      - name
